k8s/base/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: backend
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      containers:
        - name: api
          image: IMAGE:TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            exec:
              command:
                - php
                - artisan
                - healthcheck
            initialDelaySeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            exec:
              command:
                - php
                - artisan
                - healthcheck
            initialDelaySeconds: 2
            timeoutSeconds: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-nginx
  labels:
    app: api-nginx
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-nginx
      tier: backend
  template:
    metadata:
      labels:
        app: api-nginx
        tier: backend
    spec:
      containers:
        - name: api-nginx
          image: nginx:stable-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 1
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      tier: frontend
  template:
    metadata:
      labels:
        app: web
        tier: frontend
    spec:
      containers:
        - name: web
          image: WEB:TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
        - name: master
          image: redis:5
          ports:
            - containerPort: 6379
