k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nawhas-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: api.nawhas.com
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
    - host: nawhas.com
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
